--- a/argo.yaml
+++ b/argo.yaml
@@ -11,7 +11,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   source:
     path: ./apps/
-    repoURL: 'http://github.com/maciob/portfolio-argo.git'
+    repoURL: 'https://github.com/maciob/portfolio-argo.git'
     targetRevision: master
   project: default
   syncPolicy:
